Revert "Issue #282: Coloring closing icons white and align them properly."

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.InputFields.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.InputFields.css
@@ -35,12 +35,6 @@ div.InputField_InputContainer {
     line-height: 11px;
 }
 
-div.InputField_InputContainer .fa-close {
-    color: #ffffff;
-    height: 10px;
-    vertical-align: top;
-}
-
 .InputField_Search::-ms-clear {
     display: none;
     width : 0;
